# vizori

./: .gitignore  README.md  add_data_to_minio.py  deploying_on_vercel.txt  hello_world.py  install_jars.sh  main.py  minio_duckdb.py  pyproject.toml  read_from_minio.py  requirements.txt  run.sh  run_minio.sh  spark.py
app/: main.py
scripts/: generate_business_graph.py
sql/: csv.ipynb  setup_db.py  sql.ipynb
src/insightly/: __init__.py  __main__.py  auth.py  classes.py  insightly.py  plotting.py  utils.py  workflow.py
src/insightly/nodes/: check_relevance.py  conditionals.py  response.py  sql.py  sql_or_plot.py  state.py
src/insightly/plots/: bar.py  plot.py  scatter.py
