[tool.poetry]
name = "dataly-backend"
version = "0.1.0"
description = ""
authors = ["Patrick Walsh <patrick.walsh@artemislab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
pandas = "^2.2.3"
plotly = "^6.0.1"
duckdb = "^1.2.2"
deltalake = "^0.25.5"
arrow = "^1.3.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
